syntax = "proto3";
option go_package = "github.com/rancher/opni/pkg/apis/alerting/v1";

import "google/protobuf/duration.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/descriptor.proto";
import "google/protobuf/timestamp.proto";
import "google/api/http.proto";
import "google/api/annotations.proto";
import "google/rpc/status.proto";

import "github.com/rancher/opni/pkg/apis/core/v1/core.proto";

package alerting;

// ------------------ ENDPOINT ------------------

enum OpniSeverity {
  Info = 0;
  Warning = 1;
  Error = 2;
  Critical = 3;
}

enum GoldenSignal{
  Custom = 0;
  Errors = 1;
  Saturation = 2;
  Traffic = 3;
  Latency = 4;
}

message CachedState {
  bool healthy = 1; 
  bool firing = 2; 
  google.protobuf.Timestamp timestamp = 3;
}

message IncidentIntervals {
  repeated Interval items = 1;
}

message Interval {
  google.protobuf.Timestamp start = 1;
  google.protobuf.Timestamp end = 2;
}

